small tweaks to learning zig guide

--- a/src/learning_zig/00-index.html
+++ b/src/learning_zig/00-index.html
@@ -18,15 +18,15 @@ permalink: "/learning_zig/"
 		<h2 tabindex=-1 id=toc><a href=#toc aria-hidden=true>Table of Contents</a></h2>
 		<ol>
 			<li><a href=#install>Installing Zig</a>
-			<li><a href="language_overview_1">Language Overview - Part 1</a>
-			<li><a href="language_overview_2">Language Overview - Part 2</a>
-			<li><a href="style_guide">Style guide</a>
-			<li><a href="pointers">Pointers</a>
-			<li><a href="stack_memory">Stack Memory</a>
-			<li><a href="heap_memory">Heap Memory & Allocators</a>
-			<li><a href="generics">Generics</a>
-			<li><a href="coding_in_zig">Coding In Zig</a>
-			<li><a href="conclusion">Conclusion</a>
+			<li><a href="/learning_zig/language_overview_1/">Language Overview - Part 1</a>
+			<li><a href="/learning_zig/language_overview_2/">Language Overview - Part 2</a>
+			<li><a href="/learning_zig/style_guide/">Style guide</a>
+			<li><a href="/learning_zig/pointers/">Pointers</a>
+			<li><a href="/learning_zig/stack_memory/">Stack Memory</a>
+			<li><a href="/learning_zig/heap_memory/">Heap Memory & Allocators</a>
+			<li><a href="/learning_zig/generics/">Generics</a>
+			<li><a href="/learning_zig/coding_in_zig/">Coding In Zig</a>
+			<li><a href="/learning_zig/conclusion/">Conclusion</a>
 		</ol>
 	</section>
 
@@ -42,5 +42,5 @@ permalink: "/learning_zig/"
 
 <div class=pager>
 	<span></span>
-	<a class=next href=language_overview_1>Language Overview - Part 1</a>
+	<a class=next href=/learning_zig/language_overview_1/>Language Overview - Part 1</a>
 </div>
