--- a/src/learning_zig/01-language-overview-1.html
+++ b/src/learning_zig/01-language-overview-1.html
@@ -3,11 +3,11 @@ date: 2023-09-08
 layout: learning_zig
 title: "Learning Zig - Language Overview - Part 1"
 tags: [zig]
-permalink: "/learning_zig/language_overview_1"
+permalink: "/learning_zig/language_overview_1/"
 ---
 <div class=pager>
-	<a class=prev href=/learning_zig>Intro</a>
-	<a class=next href=language_overview_2>Language Overview - Part 2</a>
+	<a class=prev href=/learning_zig/>Intro</a>
+	<a class=next href=/learning_zig/language_overview_2/>Language Overview - Part 2</a>
 </div>
 
 <article>
@@ -458,6 +458,6 @@ pub fn main() void {
 </article>
 
 <div class=pager>
-	<a class=prev href=/learning_zig>Intro</a>
-	<a class=next href=language_overview_2>Language Overview - Part 2</a>
+	<a class=prev href=/learning_zig/>Intro</a>
+	<a class=next href=/learning_zig/language_overview_2/>Language Overview - Part 2</a>
 </div>
