--- a/src/learning_zig/08-coding_in_zig.html
+++ b/src/learning_zig/08-coding_in_zig.html
@@ -3,13 +3,13 @@ date: 2023-09-08
 layout: learning_zig
 title: "Learning Zig - Coding in Zig"
 tags: [zig]
-permalink: "/learning_zig/coding_in_zig"
+permalink: "/learning_zig/coding_in_zig/"
 ---
 
 <div class=pager>
-	<a class=prev href=generics>Generics</a>
-	<a class=home href=/learning_zig>Intro</a>
-	<a class=next href=conclusion>Conclusion</a>
+	<a class=prev href=/learning_zig/generics/>Generics</a>
+	<a class=home href=/learning_zig/>Intro</a>
+	<a class=next href=/learning_zig/conclusion/>Conclusion</a>
 </div>
 
 <article>
@@ -670,7 +670,7 @@ found:
 </article>
 
 <div class=pager>
-	<a class=prev href=generics>Generics</a>
-	<a class=home href=/learning_zig>Intro</a>
-	<a class=next href=conclusion>Conclusion</a>
+	<a class=prev href=/learning_zig/generics/>Generics</a>
+	<a class=home href=/learning_zig/>Intro</a>
+	<a class=next href=/learning_zig/conclusion/>Conclusion</a>
 </div>
