--- a/src/learning_zig/09-conclusion.html
+++ b/src/learning_zig/09-conclusion.html
@@ -3,12 +3,12 @@ date: 2023-09-08
 layout: learning_zig
 title: "Learning Zig - Conclusion"
 tags: [zig]
-permalink: "/learning_zig/conclusion"
+permalink: "/learning_zig/conclusion/"
 ---
 
 <div class=pager>
-	<a class=prev href=coding_in_zig>Coding In Zig</a>
-	<a class=home href=/learning_zig>Intro</a>
+	<a class=prev href=/learning_zig/coding_in_zig/>Coding In Zig</a>
+	<a class=home href=/learning_zig/>Intro</a>
 	<span></span>
 </div>
 
@@ -26,7 +26,7 @@ permalink: "/learning_zig/conclusion"
 </article>
 
 <div class=pager>
-	<a class=prev href=coding_in_zig>Coding In Zig</a>
-	<a class=home href=/learning_zig>Intro</a>
+	<a class=prev href=/learning_zig/coding_in_zig/>Coding In Zig</a>
+	<a class=home href=/learning_zig/>Intro</a>
 	<span></span>
 </div>
